schema/testdata/validation_expression_forbidden_lhs_array/schema.keel
model Post {
    fields {
        authors Author[]
    }

    @permission(
        expression: post.authors.name in post.authors.name,
        actions: [get]
    )
}

model Author {
    fields {
        name Text
        post Post
    }
}
